--- a/style.css
+++ b/style.css
@@ -6,13 +6,16 @@ body {
 h1 {
     color: #4CAF50;
 }
+h2 {
+    margin-block-start: 0;
+}
 .button-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 10px;
 }
-button {
+.button-container button {
     background-color: #f2f2f2;
     border: 2px solid #4CAF50;
     color: #4CAF50;
@@ -22,7 +25,33 @@ button {
     border-radius: 5px;
     transition: all 0.3s ease;
 }
-button:hover {
+.button-container button:hover {
     background-color: #4CAF50;
     color: white;
+}
+#bouquet-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0 auto;
+    max-width: 300px;
+}
+
+#submit-button {
+    background-color: #ffffff;
+    border: 2px dashed #000000;
+    color: #000000;
+    margin: 20px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+#submit-button:hover {
+    background-color: #b1ce92;
+    color: white;
+}
+
+#bouquet-list li {
+    margin: 5px 0;
+    font-size: 17px;
+    font-weight: bold;
 }
